kubernetes/apps/networking/nginx/ingresses/kafka.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: networking
spec:
  type: ExternalName
  externalName: 192.168.1.241
