kubernetes/apps/networking/nginx/ingresses/minio-service.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: networking
spec:
  type: ClusterIP
  ports:
    - port: 9768
      targetPort: 9768
      protocol: TCP
