kubernetes/apps/networking/nginx/ingresses/minio-ui.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-ui
  namespace: networking
spec:
  type: ExternalName
  ports:
    - port: 9769
  externalName: 192.168.1.241
