kubernetes/apps/networking/nginx/ingresses/pve.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pve
  namespace: networking
  labels:
    app: pve
spec:
  type: ExternalName
  externalName: 192.168.1.240
