kubernetes/apps/networking/nginx/ingresses/minio-service-virtualservice.yaml
---
# kubernetes/apps/networking/nginx/ingresses/minio-service-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-service
  namespace: networking
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  hosts:
    - "s3.${SECRET_DOMAIN}"
  gateways:
    - istio-ingress/external-gateway
  http:
    - route:
        - destination:
            host: minio-service
            port:
              number: 9768
