kubernetes/apps/networking/nginx/ingresses/minio-virtualservices.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-ui
  namespace: networking
spec:
  hosts:
    - minio.enchantednatures.com
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio-external.local
            port:
              number: 9769
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-service
  namespace: networking
spec:
  hosts:
    - s3.enchantednatures.com
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio-external.local
            port:
              number: 9768
