kubernetes/apps/networking/nginx/ingresses/pve.ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve
  namespace: networking
  annotations:
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns/is-public: 'true'
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: external
  rules:
    - host: &host pve.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pve
                port:
                  number: 8006
  tls:
    - hosts: [*host]
      secretName: pve-ui-tls
